# ads4gpts

./: README.md  pyproject.toml
examples/langchain/ad_agent_example/: ad_agent_example.ipynb
examples/langchain/basic_example/: basic_example.ipynb
examples/langchain/toolkit_example/: README.md
examples/langgraph/prebuilt_ad_agent/: README.md  langgraph.json
examples/langgraph/remote_graph/: subgraph_ads.ipynb
examples/langgraph/tutorial_ads_integration_in_graph/: ads_integration_in_graph.ipynb
examples/vercel-ai/ads4gpts-toolkit/: package-lock.json  package.json
examples/vercel-ai/simple_chat_with_toolkit/: package-lock.json  package.json
examples/vercelai/chatbot_example/: README.md  package.json
frontend/react/: README.md
frontend/react/playground/: package-lock.json  package.json  tailwind.config.ts
libs/custom-gpts-openapi/: README.md  openapi_config.txt  openapi_config.yaml  prompt_template.txt
libs/js-sdk/ads4gpts-langchain/: README.md  package-lock.json  package.json  tsconfig.json
libs/js-sdk/ads4gpts-openai/: README.md  (+2 more)
libs/python-sdk/ads4gpts-langchain/: README.md  pyproject.toml  requirements.txt  setup.py
libs/python-sdk/ads4gpts-langchain/ads4gpts_langchain/: __init__.py  agent.py  prompts.py  toolkit.py  tools.py  utils.py
libs/python-sdk/ads4gpts-langchain/ads4gpts_langchain/tests/: test_ads4gpts_tool.py  test_agents.py  test_tools.py
prompt-templates/: langchain-agent-prompt-template.py  langgraph-remote-graph.py  vercelai-prompt-template.txt  vercelai-system-message-prompt-template.ts  vercelai-system-prompt-template.ts
(+110 files in other folders)
