[tool.poetry]
name = "ads4gpts"
version = "0.1.0"
description = "Ads for GPT/LLM applications. Bringing the Freemium model in the AI era."
authors = ["ADS4GPTs"]
license = "LICENCE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.7"
langgraph = "^0.2.50"
httpx = "^0.27.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
